syntax = "proto3";

option go_package = "github.com/numaproj/numaflow-go/pkg/apis/proto/function/mapfn";

import "google/protobuf/empty.proto";
import "pkg/apis/proto/common/common.proto";

package function.mapfn;

service Map {
  // MapFn applies a function to each map request element.
  rpc MapFn(MapRequest) returns (MapResponseList);

  // IsReady is the heartbeat endpoint for gRPC.
  rpc IsReady(google.protobuf.Empty) returns (ReadyResponse);
}

/**
 * MapRequest represents a request element.
 */
message MapRequest {
  repeated string keys = 1;
  bytes value = 2;
  common.EventTime event_time = 3;
  common.Watermark watermark = 4;
}

/**
 * MapResponse represents a response element.
 */
message MapResponse {
  repeated string keys = 1;
  bytes value = 2;
  repeated string tags = 3;
}

/**
 * MapResponseList represents a list of response elements.
 */
message MapResponseList {
  repeated MapResponse elements = 1;
}

/**
 * ReadyResponse is the health check result.
 */
message ReadyResponse {
  bool ready = 1;
}
